Added Download page and tried API fetching

--- a/index.html
+++ b/index.html
@@ -11,7 +11,15 @@
 </head>
 
 <body>
-    <h1>This is first try</h1>
+    <h1 class="lat">This is first try</h1>
+    <h1 class="lon">This is first try</h1>
+    <!-- <img src="app.js" alt=""> -->
+    <!-- <script src="https://js.arcgis.com/4.20/esri-loader.js"></script> -->
+    <script src="https://code.jquery.com/jquery-3.6.3.js"
+        integrity="sha256-nQLuAZGRRcILA+6dMBOvcRh5Pe310sBpanc6+QBmyVM=" crossorigin="anonymous"></script>
+    <script src="https://requirejs.org/docs/release/2.3.5/minified/require.js"></script>
+    <script type="module" src="app.js"></script>
+
 </body>
 
 </html>
