Modifies Aditya's file - Suraj

--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
     <title></title>
-  </head>
-  <body>
+</head>
+
+<body>
     <section id="header">
         <div class="menu">
             <a href="#">Home</a>
@@ -17,15 +19,15 @@
         </div>
     </section>
     <section class="parallax">
-        <img src="hill1.png" id="hill1">
-        <img src="hill2.png" id="hill2">
-        <img src="hill3.png" id="hill3">
-        <img src="hill4.png" id="hill4">
-        <img src="hill5.png" id="hill5">
-        <img src="tree.png" id="tree">
+        <img src="images/Parallax/hill1.png" id="hill1">
+        <img src="images/Parallax/hill2.png" id="hill2">
+        <img src="images/Parallax/hill3.png" id="hill3">
+        <img src="images/Parallax/hill4.png" id="hill4">
+        <img src="images/Parallax/hill5.png" id="hill5">
+        <img src="images/Parallax/tree.png" id="tree">
         <h2 id="text">Roam Mates</h2>
-        <img src="leaf.png" id="leaf">
-        <img src="plant.png" id="plant">
+        <img src="images/Parallax/leaf.png" id="leaf">
+        <img src="images/Parallax/plant.png" id="plant">
     </section>
 
     <section id="banner" class="section-m1">
@@ -33,126 +35,140 @@
         <h2>To <span>roam</span> the planet</h2>
         <button class="normal">Find a travel buddy</button>
     </section>
-    
+
     <div class="container">
-      <div class="slide-container active">
-        <div class="slide">
-            <i class="fas fa-quote-right icon"></i>
-            <div class="user">
-                <img src="images/1.jpeg" alt="">
-                <div class="user-info">
-                    <h3>John Deo</h3>
-                    <div class="stars">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="far fa-star"></i>
+        <div class="slide-container active">
+            <div class="slide">
+                <i class="fas fa-quote-right icon"></i>
+                <div class="user">
+                    <img src="images/1.jpeg" alt="">
+                    <div class="user-info">
+                        <h3>John Deo</h3>
+                        <div class="stars">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="far fa-star"></i>
+                        </div>
                     </div>
                 </div>
+                <p class="text1">Manali is one of the best place to visit in india for holidays and roaming .you will
+                    get the fresh air Fresh and clean atmosphere over there there local people was really good or
+                    heplfull but mostally cabs driver and tourister are we dislike they used to charge so high from
+                    tourist . </p>
             </div>
-           <p class="text1">Manali is one of the best place to visit in india for holidays and roaming .you will get the fresh air Fresh and clean atmosphere over there there local people was really good or heplfull but mostally cabs driver and tourister are we dislike they used to charge so high from tourist . </p>
         </div>
-      </div>
-      <div class="slide-container">
-        <div class="slide">
-            <i class="fas fa-quote-right icon"></i>
-            <div class="user">
-                <img src="images/2.jpeg" alt="">
-                <div class="user-info">
-                    <h3>John Deo</h3>
-                    <div class="stars">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="far fa-star"></i>
+        <div class="slide-container">
+            <div class="slide">
+                <i class="fas fa-quote-right icon"></i>
+                <div class="user">
+                    <img src="images/2.jpeg" alt="">
+                    <div class="user-info">
+                        <h3>John Deo</h3>
+                        <div class="stars">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="far fa-star"></i>
+                        </div>
                     </div>
                 </div>
+                <p class="text1">Manali is one of the best place to visit in india for holidays and roaming .you will
+                    get the fresh air Fresh and clean atmosphere over there there local people was really good or
+                    heplfull but mostally cabs driver and tourister are we dislike they used to charge so high from
+                    tourist . </p>
             </div>
-           <p class="text1">Manali is one of the best place to visit in india for holidays and roaming .you will get the fresh air Fresh and clean atmosphere over there there local people was really good or heplfull but mostally cabs driver and tourister are we dislike they used to charge so high from tourist . </p>
         </div>
-      </div>
-      <div class="slide-container">
-        <div class="slide">
-            <i class="fas fa-quote-right icon"></i>
-            <div class="user">
-                <img src="images/3.jpeg" alt="">
-                <div class="user-info">
-                    <h3>John Deo</h3>
-                    <div class="stars">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="far fa-star"></i>
+        <div class="slide-container">
+            <div class="slide">
+                <i class="fas fa-quote-right icon"></i>
+                <div class="user">
+                    <img src="images/3.jpeg" alt="">
+                    <div class="user-info">
+                        <h3>John Deo</h3>
+                        <div class="stars">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="far fa-star"></i>
+                        </div>
                     </div>
                 </div>
+                <p class="text1">Manali is one of the best place to visit in india for holidays and roaming .you will
+                    get the fresh air Fresh and clean atmosphere over there there local people was really good or
+                    heplfull but mostally cabs driver and tourister are we dislike they used to charge so high from
+                    tourist . </p>
             </div>
-           <p class="text1">Manali is one of the best place to visit in india for holidays and roaming .you will get the fresh air Fresh and clean atmosphere over there there local people was really good or heplfull but mostally cabs driver and tourister are we dislike they used to charge so high from tourist . </p>
         </div>
-      </div>
-      <div class="slide-container">
-        <div class="slide">
-            <i class="fas fa-quote-right icon"></i>
-            <div class="user">
-                <img src="images/4.jpeg" alt="">
-                <div class="user-info">
-                    <h3>John Deo</h3>
-                    <div class="stars">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="far fa-star"></i>
+        <div class="slide-container">
+            <div class="slide">
+                <i class="fas fa-quote-right icon"></i>
+                <div class="user">
+                    <img src="images/4.jpeg" alt="">
+                    <div class="user-info">
+                        <h3>John Deo</h3>
+                        <div class="stars">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="far fa-star"></i>
+                        </div>
                     </div>
                 </div>
+                <p class="text1">Manali is one of the best place to visit in india for holidays and roaming .you will
+                    get the fresh air Fresh and clean atmosphere over there there local people was really good or
+                    heplfull but mostally cabs driver and tourister are we dislike they used to charge so high from
+                    tourist . </p>
             </div>
-           <p class="text1">Manali is one of the best place to visit in india for holidays and roaming .you will get the fresh air Fresh and clean atmosphere over there there local people was really good or heplfull but mostally cabs driver and tourister are we dislike they used to charge so high from tourist . </p>
         </div>
-      </div>
-      <div class="slide-container">
-        <div class="slide">
-            <i class="fas fa-quote-right icon"></i>
-            <div class="user">
-                <img src="images/5.jpeg" alt="">
-                <div class="user-info">
-                    <h3>John Deo</h3>
-                    <div class="stars">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="far fa-star"></i>
+        <div class="slide-container">
+            <div class="slide">
+                <i class="fas fa-quote-right icon"></i>
+                <div class="user">
+                    <img src="images/5.jpeg" alt="">
+                    <div class="user-info">
+                        <h3>John Deo</h3>
+                        <div class="stars">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="far fa-star"></i>
+                        </div>
                     </div>
                 </div>
+                <p class="text1">Manali is one of the best place to visit in india for holidays and roaming .you will
+                    get the fresh air Fresh and clean atmosphere over there there local people was really good or
+                    heplfull but mostally cabs driver and tourister are we dislike they used to charge so high from
+                    tourist . </p>
             </div>
-           <p class="text1">Manali is one of the best place to visit in india for holidays and roaming .you will get the fresh air Fresh and clean atmosphere over there there local people was really good or heplfull but mostally cabs driver and tourister are we dislike they used to charge so high from tourist . </p>
         </div>
-      </div>
-      <div id="next"><i class="fa-solid fa-chevron-right"></i></div>
-      <div id="prev" class="fas fa-chevron-left"></div>  
+        <div id="next"><i class="fa-solid fa-chevron-right"></i></div>
+        <div id="prev" class="fas fa-chevron-left"></div>
     </div>
 
-    
 
-    <script src="script.js"></script> 
+
+    <script src="script.js"></script>
     <script>
-        window.onscroll=function(){
+        window.onscroll = function () {
             scroll();
         };
 
-        function scroll(){
-            if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20)
-            {
-                 document.getElementById("header").style.top ="0";
+        function scroll() {
+            if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+                document.getElementById("header").style.top = "0";
             }
-            else
-            {
-                document.getElementById("header").style.top ="-60px";
+            else {
+                document.getElementById("header").style.top = "-60px";
             }
         }
     </script>
-   
-  </body>
+
+</body>
+
 </html>
