Chages code and arranged files and linked those to respective files

--- a/index.html
+++ b/index.html
@@ -4,21 +4,21 @@
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="CSS/style.css">
     <title></title>
 </head>
 
 <body>
     <section id="header">
         <div class="menu">
-            <a href="#">Home</a>
+            <a href="#parallax">Home</a>
             <a href="#">About</a>
             <a href="#">Home</a>
             <a href="#">Home</a>
             <a href="#">Home</a>
         </div>
     </section>
-    <section class="parallax">
+    <section id="parallax" class="parallax">
         <img src="images/Parallax/hill1.png" id="hill1">
         <img src="images/Parallax/hill2.png" id="hill2">
         <img src="images/Parallax/hill3.png" id="hill3">
@@ -32,10 +32,11 @@
 
     <section id="banner" class="section-m1">
         <h1>FIND TRAVEL BUDDIES</h1>
-        <h2>To <span>roam</span> the planet</h2>
-        <button class="normal">Find a travel buddy</button>
-    </section>
+        <h2>To <span class="red">roam</span> the planet</h2>
+        <a href="SignUp.html"><button class="normal">Find a travel buddy</button></a>
 
+    </section>
+    <!-- 
     <div class="container">
         <div class="slide-container active">
             <div class="slide">
@@ -149,7 +150,7 @@
         </div>
         <div id="next"><i class="fa-solid fa-chevron-right"></i></div>
         <div id="prev" class="fas fa-chevron-left"></div>
-    </div>
+    </div> -->
 
 
 
