--- a/Pages/SignIn.html
+++ b/Pages/SignIn.html
@@ -16,15 +16,16 @@
     <form>
       <input type="email" class="input-box" placeholder="Your Email">
       <input type="password" class="input-box" placeholder="Your Password">
-
-      <button class="sign-btn"><a href="#">Login</a></button>
+      <a href="howItWorks.html">
+        <button class="sign-btn">Login</button>
+      </a>
       <hr>
       <p class="or">OR</p>
       <button class="google-btn" id="login">Login with Google</button>
     </form>
   </div>
 </body>
-<script type="module">
+<!-- <script type="module">
   // Import the functions you need from the SDKs you need
   import { initializeApp } from "https://www.gstatic.com/firebasejs/9.17.2/firebase-app.js";
   import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.17.2/firebase-analytics.js";
@@ -72,6 +73,6 @@
         // ...
       });
   }
-</script>
+</script> -->
 
 </html>
