Solved the video autoplaying error

--- a/index.html
+++ b/index.html
@@ -71,7 +71,9 @@
                         Download</button>
                 </td>
                 <td>
-                    <video src="Video/VID-20230305-WA0000_1.mp4" loop autoplay></video>
+                    <video autoplay muted loop>
+                        <source src="/Video/VID-20230305-WA0000_1.mp4" type="video/mp4">
+                    </video>
                 </td>
             </tr>
         </table>
