Solved Image not being displayed on the site issue

--- a/Pages/SignIn.html
+++ b/Pages/SignIn.html
@@ -16,7 +16,7 @@
     <form>
       <input type="email" class="input-box" placeholder="Your Email">
       <input type="password" class="input-box" placeholder="Your Password">
-      <a href="howItWorks.html">
+      <a href="profile.html">
         <button class="sign-btn">Login</button>
       </a>
       <hr>
