--- a/Pages/SignUp.html
+++ b/Pages/SignUp.html
@@ -21,7 +21,7 @@
     <input type="email" name="" placeholder="Email">
     <input type="password" name="" placeholder="Password">
     <input type="password" name="" placeholder="Confirm Password">
-    <a href="/Pages/SignIn.html">
+    <a href="SignIn.html">
         <button type="submit">Sign up</button>
     </a>
 </body>
