--- a/Pages/profile.html
+++ b/Pages/profile.html
@@ -11,10 +11,12 @@
     <div class="container">
         <div class="main">
             <div class="topbar">
-                <a href="">Home</a>
-                <a href="">Home</a>
-                <a href="">Home</a>
-                <a href="">Home</a>
+                <a href="profile.html">Profile</a>
+                <a href="https://indiasomeday.com/en/youre-not-alone-tips-for-travelling-with-strangers/">Safety</a>
+                <a href="/index.html">Download</a>
+                <a href="/Pages/howItWorks.html">How It Works</a>
+                <a href="/index.html">Partner</a>
+                <a href="/index.html">Home</a>
             </div>
             <div class="row">
                 <div class="col-md-4 mt-1">
@@ -62,7 +64,7 @@
                                 </div>
                                 <hr>
                                 <div class="circle">
-                                    <img src="/Images/Profile/m.jpeg" alt="" class="image">
+                                    <img src="/Images/Profile/m.jpg" alt="" class="image">
                                     <h4>Motorcyclist:</h4>
                                     <h7>2,589 members</h7>
                                     <div class="join">
