--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
     <link rel="stylesheet" href="CSS/style.css">
     <link rel="stylesheet" href="CSS/download.css">
-    <!-- Fcvicon -->
+    <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="Images/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="Images/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="Images/favicon/favicon-16x16.png">
@@ -22,6 +22,7 @@
             <a href="#HIW">How It Works</a>
             <a href="#downloadApp">Download</a>
             <a href="https://indiasomeday.com/en/youre-not-alone-tips-for-travelling-with-strangers/">Safety</a>
+            <a href="Pages/profile.html">Profile</a>
         </div>
     </section>
     <section id="parallax" class="parallax">
@@ -31,7 +32,15 @@
         <img src="Images/Parallax/hill4.png" id="hill4">
         <img src="Images/Parallax/hill5.png" id="hill5">
         <img src="Images/Parallax/tree.png" id="tree">
-        <h2 id="text">Roam Mates</h2>
+
+        <!-- <h2 id="text1">बॅग भरो और निकल पड़ो</h2><br>
+        <h2 id="text2">WITH</h2><br>
+        <h2 id="text3">Roam Mates</h2> -->
+        <!-- <h2 id="text"><span class="text1">बॅग भरो और निकल पड़ो</span><br><span class="text2">WITH</span><br><span
+                class="text3">Roam Mates</span></h2> -->
+
+        <h2 id="text"><span class="text1">Bag Bharo Aur Nikal Pado</span><br><span class="text2">WITH</span><br><span
+                class="text3">Roam Mates</span></h2>
         <img src="Images/Parallax/leaf.png" id="leaf">
         <img src="Images/Parallax/plant.png" id="plant">
     </section>
@@ -72,7 +81,7 @@
                 </td>
                 <td>
                     <video autoplay muted loop>
-                        <source src="/Video/VID-20230305-WA0000_1.mp4" type="video/mp4">
+                        <source src="Video/VID-20230305-WA0000_1.mp4" type="video/mp4">
                     </video>
                 </td>
             </tr>
