Modified CSS files

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
     </section>
 
     <section id="banner" class="section-m1">
+        <!-- <img src="Images/pexels-photo-1483024.jpeg" alt=""> -->
         <h1>FIND TRAVEL BUDDIES</h1>
         <h2>To <span class="red">roam</span> the planet</h2>
         <a href="Pages/SignUp.html"><button class="normal">Find a travel buddy</button></a>
